Fixed hyperlinks and code letter spacing

--- a/css/main.sass
+++ b/css/main.sass
@@ -387,8 +387,14 @@ body
       -moz-hyphens: auto
       hyphens: auto
     a
-      color: #fff
-      text-decoration: underline
+      font-size: 24px
+      font-family: 'Fira Code', monospace
+      font-weight: 400
+      color: #008dd1
+      text-decoration: none
+      &:hover
+          color: #6a7fd2
+          text-decoration: underline
     img
       max-width: 100%
       margin: 0 auto
@@ -606,6 +612,7 @@ code
   color: green
   border-radius: 3px
   min-height: 250px
+  letter-spacing: 0.3px
 
 code
   padding: 1px 5px
